--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -1,25 +1,30 @@
 <!-- <iframe src="../assests/trails.html"  width="1600" height="460" style="border:0;">
 </iframe> -->
-<div style="margin: 2rem;"><br>
-    <h3>
-        CONSTRUCTION TECHNIQUES:
-    </h3>
-    
-    ⦁ Usage of Capsule houses(*)<br>
-    ⦁ Usage of Recycled Concrete(*)<br>
-    ⦁ Restricting the building height up to G+3(ground floor+ three floors) because it reduces the cost of
-    construction(*)
-    <br>⦁ Compromising in the quality(not suggestible for large scale)
-    <br>⦁ Using of modern construction techniques like containment reinforcement system
-    <br>⦁ Constructing of slope / Inverted V shaped slabs to the house .
-    <br>⦁ Using tiled roofs .<br><br>
-    <h3>
-        TECHNIQUES FOR SELF-SUSTAINABILITY:
-    </h3>
-    ⦁ Basic Kitchen garden
-    <br>⦁ Water harvesting systems
-    <br>⦁ Using of Bio-Gas
-    <br>⦁ Waste management
+<div class="row" style="margin: 2rem;"><br>
+    <div class="col">
+        <h3>
+            CONSTRUCTION TECHNIQUES :
+        </h3>
+        <ul>
+            <li>Usage of Capsule houses(*)</li>
+            <li>Usage of Recycled Concrete(*)</li>
+            <li>Restricting the building height up to G+3(ground floor+ three floors) because it reduces the cost of
+                construction(*)</li>
+            <li>Compromising in the quality(not suggestible for large scale)</li>
+            <li>Using tiled roofs</li>
+        </ul>
+    </div>
+    <div class="col">
+        <h3>
+            TECHNIQUES FOR SELF-SUSTAINABILITY :
+        </h3>
+        <ul>
+            <li>Basic Kitchen garden</li>
+            <li>Water harvesting systems</li>
+            <li>Using of Bio-Gas</li>
+            <li>Waste management</li>
+        </ul>
+    </div>
 </div>
 <div class="row" style="margin: 2rem;">
     <div class="col" style="text-align: center;">
@@ -35,7 +40,8 @@
     <div class="col" style="text-align: center;margin: 2rem;">
         <h3>Home-1</h3><br>
         <div style="overflow: hidden;width: 95vw;height: 90vh;">
-            <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+            <iframe src="https://kovikarthik.github.io/sayduckaz21/"
+                style="border:0;height:90vh;width: 100vw;left: 10%;">
             </iframe>
         </div>
     </div>
@@ -84,4 +90,4 @@
 
 
 
-<!-- <iframe width="100%" height="100%" frameBorder="0" [src]="sayduck"></iframe> -->
+<!-- <iframe src="https://www.robots.ox.ac.uk/~vgg/software/image-compare/app/latest/"></iframe> -->
