--- a/src/app/adminfolder/jobapplications/jobapplications.component.html
+++ b/src/app/adminfolder/jobapplications/jobapplications.component.html
@@ -5,7 +5,7 @@
     <!-- {{data | json}} -->
     <div class="m-5 mt-0" *ngIf="data&&data.length!=0 else nodata">
         <input [(ngModel)]="searchtext" class="form-control card shadow" placeholder="Search"
-            style="width: 30vw;margin-left:30vw" /><br />
+            style="width: 30vw;margin-left:30vw;position: fixed;margin-top: 0;z-index: 10;top: 11rem;" /><br />
         <div class=" card m-2  mb-0 shadow  border-0"
             style="background-color: whiteSmoke;padding: 1rem;margin-left: 20vw !important; width: 50vw;"
             *ngFor="let c of search() ; index as i">
@@ -140,7 +140,8 @@
                         formControlName="jobskills">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br />
                     <label><b>Salary</b></label>
-                    <input type="text" class="form-control shadow-none" type="number" placeholder="Enter  Salary" formControlName="amount">
+                    <input type="text" class="form-control shadow-none" type="number" placeholder="Enter  Salary"
+                        formControlName="amount">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br>
                     <label><b>Job Description</b></label>
                     <textarea type="text" class="form-control shadow-none" placeholder="Job Description"
