--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -81,6 +81,18 @@
         </iframe>
     </div>
 </div>
+<div class="row" style="margin: 2rem;text-align: center;">
+
+    <div class="col">
+        <h3>Blue Print</h3><br>
+        <img src="../../assets/homebp7.jpeg"  style="width:45vw;height:53vh;">
+    </div>
+    <div class="col" style="overflow: hidden;width: 50vw;height:75vh">
+        <h3>Home-7</h3><br>
+        <iframe src="https://kovikarthik.github.io/sihhome7/" style="width: 55vw;height:50vh">
+        </iframe>
+    </div>
+</div>
 
 
 
