--- a/src/app/adminfolder/adminmaps/adminmaps.component.html
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.html
@@ -1,5 +1,5 @@
 <br />
-
+<div echarts style="width:100vw" [options]="option"></div>
 <button type="button" class="btn btn-primary shadow-none" data-toggle="modal" data-target="#myModal"
     style="float: right;margin-right: 1rem;background-color: rgb(16, 29, 127);" (click)="publicdetails=true"><b>Slum
         People</b></button>
